# el7008-YOLOProject

./: CMakeLists.txt  README.txt  augment_images.ipynb  augment_images.py  createExamples.cpp  write.py
darknet/cfg/: yolov3-tiny-obj.cfg
darknet/data/: obj.data  obj.names  train.txt
